# PatientStratification

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: annotations.csv
data/PMC11606102/: 13578_2024_1322_MOESM1_ESM.docx  13578_2024_1322_MOESM2_ESM.xlsx  13578_2024_1322_MOESM3_ESM.xlsx  13578_2024_1322_MOESM4_ESM.xlsx  13578_2024_1322_MOESM5_ESM.xlsx  13578_2024_1322_MOESM6_ESM.xlsx  13578_2024_1322_MOESM7_ESM.xlsx  13578_2024_1322_MOESM9_ESM.xlsx
scripts/: run_pipeline.py
src/: __init__.py  clustering.py  config.py  dimensionality_reduction.py  preprocessing.py  visualization.py
streamlit/: app.py  config.toml  config.yaml  secrets.toml
